kubernetes/apps/prod/cloudnative-pg/cluster/namespace.yaml
---
# create a namespace for homepage
apiVersion: v1
kind: Namespace
metadata:
  name: cnpg-db
