kubernetes/apps/prod/cloudnative-pg/cluster/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: clusterdb
  namespace: clusterdb
spec:
  entryPoints:
    - websecure
  tls:
    secretName: clusterdb.${DOMAIN}
    passthrough: true
  routes:
    - match: HostSNI(`${HOST_DB}.${DOMAIN}`)
      services:
        - name: cluster-rw
          port: 5432
          terminationDelay: 0
